# pong

./: Cargo.toml  bluepill.gdb  memory.x
.cargo/: config.toml
dbg/: stm32f103.gdb  stm32f401.gdb
embedded/: Cargo.toml  blink.rs  control.rs  drawer.rs  main.rs  rnd.rs
embedded/stm32/: mod.rs  stm32f103.rs  stm32f401.rs
pong/: Cargo.toml  ball.rs  lib.rs  player.rs  prelude.rs  test.rs
src/: blink.rs  drawer.rs  main.rs  pong.rs  rnd.rs
src/pong/: ball.rs  player.rs  prelude.rs
