[package]
name = "pong"
version = "0.1.0"
authors = ["x1b6e6 <ftdabcde@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "1.0.0"
embedded-hal = "0.2.5"
embedded-graphics = "0.7.1"
embedded-dma = "0.1.2"
display-interface = "0.4.1"
numtoa = "0.2.4"

[dependencies.ssd1306]
git = "https://github.com/jamwaffles/ssd1306"
branch = "master"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = [ "stm32f103", "rt" ]

[[bin]]
name = "pong"
test = false
bench = false

[profile.dev]
opt-level = "s"
debug = true
lto = true

[profile.release]
opt-level = "z"
debug = false
lto = true

[features]
default = []
